<resources>
    <string name="app_name">MySoundboardApp</string>
    <string name="action_settings">Settings</string>
    <string name="soundboard">Soundboard</string>
    <string name="bandamaker">Bandaaa maker b</string>
    <string name="tango">Tango</string>
    <string name="banter">Banter</string>
    <string name="alrighttt">Alrighttttt</string>
    <string name="whatdoyouthinkarmaaan">What do you think armaaaan</string>
</resources>
